--- a/kMaps/css/principal.css
+++ b/kMaps/css/principal.css
@@ -5,9 +5,14 @@
 }
 
 body{
-    background:url(../img/background.jpg) no-repeat center top;
+    background:url(../img/background.jpg) no-repeat center top fixed;
     width: 100%;
     height: 100%;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 h1{
@@ -73,4 +78,18 @@ hr{
     float: right;
     color: #fff;
     font-size: 14px;
+}
+
+#help{
+    display: none;
+    position: absolute;
+    top: 100px;
+}
+
+#help .balao{
+    background-color: #FFF;
+    padding: 20px;
+    float: right;
+    margin-top: 40px;
+     box-shadow: 5px 5px 5px #888888;
 }
